# dovecot

./: .gitignore  AUTHORS  configure.ac
src/lib-storage/: mailbox-list-private.h
src/lib-storage/index/: Makefile.am
src/lib-storage/index/ldap/: Makefile.am  ldap-copy.c  ldap-mail.c  ldap-mailbox.c  ldap-settings.c  ldap-settings.h  ldap-storage.c  ldap-storage.h  ldap-sync.c  ldap-sync.h
